goit-markup-hw-07

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,12 +23,12 @@
   <body > 
     <header>
       <div class="container">
-        <div class="wrapper-q">
+        <div class="header__wrapper-q">
           <a lang="en" href="./index.html" class="logo active logo-activ "
             ><span class="logo-web">Web</span>Studio</a
           >
-          <nav>
-            <ul class="navigation-r">
+          <nav class="navigation">
+            <ul class="header__list">
               <li>
                 <a href="./index.html" class="active  heder__a animashn"> Студія </a>
               </li>
@@ -44,7 +44,7 @@
             </ul>
           </nav>
 
-          <ul class="box-navigation">
+          <ul class="header__list-two">
             <li class="icon-tel-heder">
               <div class="div_anime animashn">
               <svg class="mail-heder">
@@ -272,9 +272,9 @@
         </div>
         </section>
       </main>
-    <footer class="adress">
+    <footer class="footer">
       <div class=" container">
-        <div class="logo__footer">
+        <div class="footer-wraper__logo">
       <a lang="en" href="./index.html" class="logo logo-a active"
         ><span class="logo-web logo-b">Web</span>Studio</a
       >
