--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <div class="container">
-        <div class="wrapper-q">
+        <div class="header__wrapper-q">
           <a lang="en" href="./index.html" class="logo active logo-activ"
             ><span class="logo-web">Web</span>Studio</a
           >
-          <nav>
-            <ul class="navigation-r">
+          <nav class="navigation">
+            <ul class="header__list">
               <li>
                 <a href="./index.html" class="navigation-a active"> Студія </a>
               </li>
@@ -49,7 +49,7 @@
             </ul>
           </nav>
 
-          <ul class="box-navigation">
+          <ul class="header__list-two">
             <li class="icon-tel-heder">
               <div class="div_anime  animashn">
                 <svg class="mail-heder">
@@ -446,9 +446,9 @@
         </div>
       </section>
     </main>
-    <footer class="adress">
+    <footer class="footer">
       <div class="container">
-        <div class="logo__footer">
+        <div class="footer-wraper__logo">
           <a lang="en" href="./index.html" class="logo logo-a active"
             ><span class="logo-web logo-b">Web</span>Studio</a
           >
