goit-markup-hw-07
goit-markup-hw-07

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
           <ul class="header__list-two">
             <li class="icon-tel-heder">
-              <div class="div_anime  animashn">
+              <div class="div_anime animashn">
                 <svg class="mail-heder">
                   <use
                     href="./images/icons.svg#icon-mail "
@@ -97,67 +97,51 @@
 
       <section class="section">
         <div class="container">
-          <h2 class="subject">СЕКЦІЯ ТЕХНОЛОГІЇ</h2>
-          <ul class="tehnology">
-            <li class="li-tehnology">
-              <div class="section__pictuary">
-                <svg class="icon__antenna icon__focus">
-                  <use
-                    href="./images/icons.svg#icon-antenna"
-                    width="65"
-                    height="70"
-                  ></use>
+          <h2 class="hidden__header">СЕКЦІЯ ТЕХНОЛОГІЇ</h2>
+          <ul class="section-list__tehnology">
+            <li class="section-tehnology__item">
+              <div class="section-item__wraper">
+                <svg class="icon__antenna" width="65" height="70">
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
-              <h3 class="headline">УВАГА ДО ДЕТАЛЕЙ</h3>
-              <p class="text cool">
+              <h3 class="section-tehnology__headline">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <p class="section-tehnology__text ">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
             </li>
-            <li class="li-tehnology">
-              <div class="section__pictuary">
-                <svg class="icon__antenna icon__focus">
-                  <use
-                    href="./images/icons.svg#icon-clock"
-                    width="67"
-                    height="70"
-                  ></use>
+            <li class="section-tehnology__item">
+              <div class="section-item__wraper">
+                <svg class="section-tehnology__svg" width="67" height="70">
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
-              <h3 class="headline">ПУНКТУАЛЬНІСТЬ</h3>
-              <p class="text cool">
+              <h3 class="section-tehnology__headline">ПУНКТУАЛЬНІСТЬ</h3>
+              <p class="section-tehnology__text ">
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
               </p>
             </li>
-            <li class="li-tehnology">
-              <div class="section__pictuary">
-                <svg class="icon__antenna icon__focus">
-                  <use
-                    href="./images/icons.svg#icon-comp"
-                    width="70"
-                    height="55"
-                  ></use>
+            <li class="section-tehnology__item">
+              <div class="section-item__wraper">
+                <svg class="section-tehnology__svg" width="70" height="55">
+                  <use href="./images/icons.svg#icon-comp"></use>
                 </svg>
               </div>
-              <h3 class="headline">ПЛАНУВАННЯ</h3>
-              <p class="text cool">
+              <h3 class="section-tehnology__headline">ПЛАНУВАННЯ</h3>
+              <p class="section-tehnology__text ">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li class="li-tehnology li-tehnology-right">
-              <div class="section__pictuary">
-                <svg class="icon__antenna icon__focus">
-                  <use
-                    href="./images/icons.svg#icon-astronaut "
-                    width="60"
-                    height="60"
-                  ></use>
+            <li class="section-tehnology__item">
+              <div class="section-item__wraper">
+                <svg class="section-tehnology__svg" width="60" height="60">
+                  <use href="./images/icons.svg#icon-astronaut "></use>
                 </svg>
               </div>
-              <h3 class="headline">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-              <p class="text cool">
+              <h3 class="section-tehnology__headline">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <p class="section-tehnology__text ">
                 Значимість цих проблем настільки очевидна, що реалізація
                 планових завдань.
               </p>
@@ -168,38 +152,38 @@
       <section class="section">
         <div class="container">
           <h2 class="title">Чим ми займаємося</h2>
-          <ul class="foto">
-            <li class="foto__box">
+          <ul class="section-foto__list">
+            <li class="section-foto__link">
               <img
                 src="./images/img2.jpg"
                 alt=" Технологія "
                 width="370"
                 height="294"
               />
-              <div class="wrop__text">
-                <h3 class="title__text">Десктопні додатки</h3>
+              <div class="section-foto__wraper">
+                <h3 class="section-foto__title">Десктопні додатки</h3>
               </div>
             </li>
-            <li class="foto__box">
+            <li class="section-foto__link">
               <img
                 src="./images/img1.jpg"
                 alt=" Технологія "
                 width="370"
                 height="294"
               />
-              <div class="wrop__text">
-                <h3 class="title__text">Мобільні додатки</h3>
+              <div class="section-foto__wraper">
+                <h3 class="section-foto__title">Мобільні додатки</h3>
               </div>
             </li>
-            <li class="foto__box">
+            <li class="section-foto__link">
               <img
                 src="./images/img3.jpg"
                 alt=" Технологія "
                 width="370"
                 height="294"
               />
-              <div class="wrop__text">
-                <h3 class="title__text">Дизайнерські рішення</h3>
+              <div class="section-foto__wraper">
+                <h3 class="section-foto__title">Дизайнерські рішення</h3>
               </div>
             </li>
           </ul>
@@ -208,9 +192,9 @@
 
       <section class="section section-frend">
         <div class="container">
-          <h2 class="bend">Наша команда</h2>
-          <ul class="frend">
-            <li class="frend-block">
+          <h2 class="title">Наша команда</h2>
+          <ul class="section-frend__list">
+            <li class="section-frend__link">
               <img
                 src="./images/igor.jpg"
                 alt=" Студія "
@@ -218,37 +202,49 @@
                 height="260"
                 class="img-block"
               />
-              <h3 class="subtitle">Ігор Дем'яненко</h3>
-              <p lang="en" class="profession">Product Designer</p>
-              <ul class="sotsial__link">
+              <h3 class="section-frend__subtitle">Ігор Дем'яненко</h3>
+              <p lang="en" class="section-frend__text">Product Designer</p>
+              <ul class="sotsial__list">
                 <li class="li_sots">
                   <a class="link__sots" href="#" aria-label="instagram">
                     <svg class="ikon_so" width="20" height="20">
-                      <use href="./images/icons.svg#icon-instagram" class="img__sots"></use></svg
+                      <use
+                        href="./images/icons.svg#icon-instagram"
+                        class="img__sots"
+                      ></use></svg
                   ></a>
                 </li>
                 <li class="li_sots">
                   <a class="link__sots" href="#" aria-label="twitter">
                     <svg class="ikon_so" width="20" height="20">
-                      <use href="./images/icons.svg#icon-twitter" class="img__sots"></use></svg
+                      <use
+                        href="./images/icons.svg#icon-twitter"
+                        class="img__sots"
+                      ></use></svg
                   ></a>
                 </li>
                 <li class="li_sots">
                   <a class="link__sots" href="#" aria-label="facebook">
                     <svg class="ikon_so" width="20" height="20">
-                      <use href="./images/icons.svg#icon-facebook" class="img__sots"></use></svg
+                      <use
+                        href="./images/icons.svg#icon-facebook"
+                        class="img__sots"
+                      ></use></svg
                   ></a>
                 </li>
                 <li class="li_sots">
                   <a class="link__sots" href="#" aria-label="linkedin">
                     <svg class="ikon_so" width="20" height="20">
-                      <use href="./images/icons.svg#icon-linkedin2" class="img__sots"></use></svg
+                      <use
+                        href="./images/icons.svg#icon-linkedin2"
+                        class="img__sots"
+                      ></use></svg
                   ></a>
                 </li>
               </ul>
             </li>
 
-            <li class="frend-block">
+            <li class="section-frend__link">
               <img
                 src="./images/olga.jpg"
                 alt=" Розробник інтерфейсу "
@@ -256,9 +252,9 @@
                 height="260"
                 class="img-block"
               />
-              <h3 class="subtitle">Ольга Рєпіна</h3>
-              <p lang="en" class="profession">Frontend Developer</p>
-              <ul class="sotsial__link">
+              <h3 class="section-frend__subtitle">Ольга Рєпіна</h3>
+              <p lang="en" class="section-frend__text">Frontend Developer</p>
+              <ul class="sotsial__list">
                 <li class="li_sots">
                   <a class="link__sots" href="#" aria-label="instagram">
                     <svg class="ikon_so" width="20" height="20">
@@ -286,7 +282,7 @@
               </ul>
             </li>
 
-            <li class="frend-block">
+            <li class="section-frend__link">
               <img
                 src="./images/mykola.jpg"
                 alt=" Маркетінг "
@@ -294,9 +290,9 @@
                 height="260"
                 class="img-block"
               />
-              <h3 class="subtitle">Микола Тарасов</h3>
-              <p lang="en" class="profession">Marketing</p>
-              <ul class="sotsial__link">
+              <h3 class="section-frend__subtitle">Микола Тарасов</h3>
+              <p lang="en" class="section-frend__text">Marketing</p>
+              <ul class="sotsial__list">
                 <li class="li_sots">
                   <a class="link__sots" href="#" aria-label="instagram">
                     <svg class="ikon_so" width="20" height="20">
@@ -324,7 +320,7 @@
               </ul>
             </li>
 
-            <li class="frend-block">
+            <li class="section-frend__link">
               <img
                 src="./images/myhail.jpg"
                 alt=" Дизайнер "
@@ -332,9 +328,9 @@
                 height="260"
                 class="img-block"
               />
-              <h3 class="subtitle">Михайло Єрмаков</h3>
-              <p lang="en" class="profession">ДUI Designer</p>
-              <ul class="sotsial__link">
+              <h3 class="section-frend__subtitle">Михайло Єрмаков</h3>
+              <p lang="en" class="section-frend__text">ДUI Designer</p>
+              <ul class="sotsial__list">
                 <li class="li_sots">
                   <a class="link__sots" href="#" aria-label="instagram">
                     <svg class="ikon_so" width="20" height="20">
@@ -367,7 +363,7 @@
 
       <section class="section">
         <div class="container">
-          <h2 class="text_section">Постійні клієнти</h2>
+          <h2 class="title">Постійні клієнти</h2>
           <ul class="link__foot">
             <li class="link__li__foot">
               <a href="#" class="li__client__a">
@@ -454,7 +450,7 @@
           >
           <div>
             <h2 class="text__footer">приєднуйтесь</h2>
-            <ul class="sotsial__link sotsial__footer">
+            <ul class="sotsial__list sotsial__footer">
               <li class="li_sots">
                 <a
                   class="link__sots link__sots_foot"
@@ -520,18 +516,18 @@
             <li class="adress-li-a">
               <a
                 href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5383858,17z/data=!4m13!1m7!3m6!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!2z0LHRg9C7LiDQm9C10YHQuCDQo9C60YDQsNC40L3QutC4LCAyNiwg0JrQuNC10LIsIDAyMDAw!3b1!8m2!3d50.4265807!4d30.5383858!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858 "
-                class="adress-a cool active"
+                class="adress-a  active"
                 target="_blank"
                 >м. Київ, пр-т Лесі Українки, 26</a
               >
             </li>
             <li class="adress-li-a">
-              <a href="mailto:info@devstudio.com" class="adress-b cool active"
+              <a href="mailto:info@devstudio.com" class="adress-b  active"
                 >info@devstudio.com</a
               >
             </li>
             <li class="adress-li-a">
-              <a href="tel:+380961111111" class="adress-c cool active"
+              <a href="tel:+380961111111" class="adress-c  active"
                 >+38 096 111 11 11</a
               >
             </li>
