--- a/index.html
+++ b/index.html
@@ -495,8 +495,8 @@
           </div>
           <div>
             <h2 class="text__footer">підпишіться на розсилку</h2>
-            <div class="footer-batton">
-              <div class="footer-div__mail">E-mail</div>
+            <form class="footer-batton">          
+              <input type="email" placeholder="E-mail" list="mailList" class="footer-input__mail">
               <button type="button" class="button-footer__text" data-modal-open>
                 Підписатися
                 <svg class="svg-send">
@@ -507,8 +507,9 @@
                     height="13"
                   ></use>
                 </svg>
-              </button>
-            </div>
+              </button>          
+           
+          </form>
           </div>
         </div>
         <address class="addres__footer">
