--- a/portfolio.html
+++ b/portfolio.html
@@ -325,22 +325,21 @@
         </div>
         <div>
           <h2 class="text__footer">підпишіться на розсилку</h2>
-          <div class="footer-batton">
-            <div class="footer-div__mail">E-mail</div>
+          <form class="footer-batton">          
+            <input type="email" placeholder="E-mail" list="mailList" class="footer-input__mail">
             <button type="button" class="button-footer__text" data-modal-open>
               Підписатися
               <svg class="svg-send">
                 <use
                   class=""
                   href="./images/icons.svg#send"
-                  width="13"
-                  height="13"
+                  width="24"
+                  height="24"
                 ></use>
               </svg>
-            </button>
-          </div>
-        </div>
-     
+            </button>            
+        </form>
+        </div>  
       </div>
 
       <address class="addres__footer"> 
