goit-markup-hw-07
goit-markup-hw-07

--- a/portfolio.html
+++ b/portfolio.html
@@ -329,12 +329,12 @@
             <input type="email" placeholder="E-mail" list="mailList" class="footer-input__mail">
             <button type="button" class="button-footer__text" data-modal-open>
               Підписатися
-              <svg class="svg-send">
+              <svg class="svg-send"   width="24"
+              height="24">
                 <use
                   class=""
                   href="./images/icons.svg#send"
-                  width="24"
-                  height="24"
+                
                 ></use>
               </svg>
             </button>            
