goit-markup-hw-07

--- a/index.html
+++ b/index.html
@@ -364,12 +364,12 @@
       <section class="section">
         <div class="container">
           <h2 class="title">Постійні клієнти</h2>
-          <ul class="link__foot">
-            <li class="link__li__foot">
-              <a href="#" class="li__client__a">
-                <svg class="logo4">
+          <ul class="menu-list">
+            <li class="menu-list__link">
+              <a href="#" class="menu-list__item">
+                <svg class="menu-list__svg">
                   <use
-                    class="div__svg"
+                    class="menu-list__icon"
                     href="./images/icons.svg#icon-logo1"
                     width="106"
                     height="60"
@@ -378,11 +378,11 @@
               </a>
             </li>
 
-            <li class="link__li__foot">
-              <a href="#" class="li__client__a">
-                <svg class="logo4">
+            <li class="menu-list__link">
+              <a href="#" class="menu-list__item">
+                <svg class="menu-list__svg">
                   <use
-                    class="div__svg"
+                    class="menu-list__icon"
                     href="./images/icons.svg#icon-logo2"
                     width="106"
                     height="60"
@@ -390,11 +390,11 @@
                 </svg>
               </a>
             </li>
-            <li class="link__li__foot">
-              <a href="#" class="li__client__a">
-                <svg class="logo4">
+            <li class="menu-list__link">
+              <a href="#" class="menu-list__item">
+                <svg class="menu-list__svg">
                   <use
-                    class="div__svg"
+                    class="menu-list__icon"
                     href="./images/icons.svg#icon-logo3"
                     width="106"
                     height="60"
@@ -402,11 +402,11 @@
                 </svg>
               </a>
             </li>
-            <li class="link__li__foot">
-              <a href="#" class="li__client__a">
-                <svg class="logo4">
+            <li class="menu-list__link">
+              <a href="#" class="menu-list__item">
+                <svg class="menu-list__svg">
                   <use
-                    class="div__svg"
+                    class="menu-list__icon"
                     href="./images/icons.svg#icon-logo4"
                     width="106"
                     height="60"
@@ -414,11 +414,11 @@
                 </svg>
               </a>
             </li>
-            <li class="link__li__foot">
-              <a href="#" class="li__client__a">
-                <svg class="logo4">
+            <li class="menu-list__link">
+              <a href="#" class="menu-list__item">
+                <svg class="menu-list__svg">
                   <use
-                    class="div__svg"
+                    class="menu-list__icon"
                     href="./images/icons.svg#icon-logo5"
                     width="106"
                     height="60"
@@ -426,11 +426,11 @@
                 </svg>
               </a>
             </li>
-            <li class="link__li__foot link__logo6">
-              <a href="#" class="li__client__a">
-                <svg class="logo4">
+            <li class="menu-list__link ">
+              <a href="#" class="menu-list__item">
+                <svg class="menu-list__svg">
                   <use
-                    class="div__svg"
+                    class="menu-list__icon"
                     href="./images/icons.svg#icon-logo6"
                     width="106"
                     height="60"
