--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       referrerpolicy="no-referrer"
     />
 
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <header class="header">
@@ -526,7 +526,7 @@
               placeholder="E-mail"
               class="footer-input__mail"
             />
-            <button type="button" class="button-footer__text" data-modal-open>
+            <button type="submit" class="button-footer__text" data-modal-open>
               Підписатися
               <svg class="svg-send" width="24" height="24">
                 <use class="" href="./images/icons.svg#send"></use>
